@@ -171,7 +171,7 @@ $DYNAMIC = 0;
 $CONFIG = "";
 $ADD_MODULE = "";
 $PERL_DIRECTIVE_HANDLERS = 0;
-$PERL_TIE_TABLES = 0;
+$PERL_TABLE_API = 0;
 $PERL_LOG_API = 0;
 $PERL_URI_API = 0;
 $PERL_UTIL_API = 0;
@@ -223,7 +223,7 @@ sub is_mp_arg {
    PERL_STACKED_HANDLERS 
    PERL_METHOD_HANDLERS
    PERL_DIRECTIVE_HANDLERS
-   PERL_TIE_TABLES
+   PERL_TABLE_API
    PERL_LOG_API
    PERL_URI_API
    PERL_UTIL_API
@@ -330,7 +330,8 @@ for (keys %callback_alias) {
 
 if($EVERYTHING) {
     @callback_hooks{qw(PERL_STACKED_HANDLERS PERL_METHOD_HANDLERS)} = (1) x 2;
-    for(qw(ALL_HOOKS PERL_SSI PERL_SECTIONS PERL_TIE_TABLES PERL_DIRECTIVE_HANDLERS PERL_LOG_API PERL_URI_API PERL_UTIL_API)) {
+    for(qw(ALL_HOOKS PERL_SSI PERL_SECTIONS PERL_DIRECTIVE_HANDLERS 
+	   PERL_LOG_API PERL_URI_API PERL_UTIL_API PERL_TABLE_API)) {
        $$_ = 1;
     }
 }
@@ -343,7 +344,7 @@ if($ALL_HOOKS) {
 }
 
 if($DYNAMIC) {
-    $PERL_DIRECTIVE_HANDLERS = $PERL_TIE_TABLES = 
+    $PERL_DIRECTIVE_HANDLERS = $PERL_TABLE_API = 
 	$PERL_LOG_API = $PERL_URI_API = $PERL_UTIL_API = 1;
 }
 
@@ -561,9 +562,9 @@ if($PERL_DIRECTIVE_HANDLERS) {
     push @xs_modules, "Apache::ModuleConfig";
     $callback_hooks{PERL_DIRECTIVE_HANDLERS} = 1;
 }
-if($PERL_TIE_TABLES) {
+if($PERL_TABLE_API) {
     push @xs_modules, "Apache::Tie";
-    $callback_hooks{PERL_TIE_TABLES} = 1;
+    $callback_hooks{PERL_TABLE_API} = 1;
 }
 if($PERL_RUN_XS or $experimental{PERL_RUN_XS} > 1) {
     my $mmn    = $USE_APXS ? MMN_130 : magic_number($APACHE_SRC);
