@@ -3,9 +3,9 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- <Perl> should report failed config
+- Apache::PerlRun should save/restore %INC
 
-- PERL_TIE_TABLES -> PERL_TABLE_API
+- <Perl> should report failed config
 
 - $ENV{PATH}
 
