@@ -33,7 +33,6 @@ PERL_CLEANUP            = yes
 PERL_STACKED_HANDLERS   = yes
 PERL_METHOD_HANDLERS    = yes
 PERL_DIRECTIVE_HANDLERS = yes
-PERL_TIE_TABLES         = yes
 PERL_SECTIONS           = yes
 PERL_RESTART            = yes
 
