@@ -159,7 +159,7 @@ OIFS="$IFS" IFS="$DIFS"
 for hook in \
     DISPATCH CHILD_INIT CHILD_EXIT POST_READ_REQUEST TRANS HEADER_PARSER \
     ACCESS AUTHEN AUTHZ TYPE FIXUP HANDLER LOG INIT CLEANUP STACKED_HANDLERS \
-    METHOD_HANDLERS DIRECTIVE_HANDLERS TIE_TABLES SECTIONS RESTART SSI TRACE THREADS; do
+    METHOD_HANDLERS DIRECTIVE_HANDLERS SECTIONS RESTART SSI TRACE THREADS; do
     eval "val=\$param_PERL_${hook}"
     case $hook in
         TRACE|THREADS ) 
